Correct final BAI bin number
There is an even number of bins on the last row too -- previously this
was typoed or off-by-one.  Hat tip Pavel Sinitcyn.

--- a/SAMv1.tex
+++ b/SAMv1.tex
@@ -922,7 +922,7 @@ calls in average.
 
 In the BAI format, each bin may span $2^{29}$, $2^{26}$, $2^{23}$, $2^{20}$,
 $2^{17}$ or $2^{14}$ bp. Bin 0 spans a 512Mbp region, bins 1--8 span 64Mbp,
-9--72 8Mbp, 73--584 1Mbp, 585--4680 128Kbp and bins 4681--37449 span 16Kbp
+9--72 8Mbp, 73--584 1Mbp, 585--4680 128Kbp, and bins 4681--37448 span 16Kbp
 regions.  This implies that this index format does not support reference
 chromosome sequences longer than $2^{29}-1$.
 
