--- a/CSIv1.tex
+++ b/CSIv1.tex
@@ -34,8 +34,7 @@
   & & \multicolumn{5}{c|}{\textcolor{gray}{\it List of chunks (n=n\_chunk)}} \\\cline{4-7}
   & & & {\sf chunk\_beg} & (Virtual) file offset of the start of the chunk & {\tt uint64\_t} & \\\cline{4-7}
   & & & {\sf chunk\_end} & (Virtual) file offset of the end of the chunk & {\tt uint64\_t} & \\\cline{1-7}
-  \multicolumn{4}{|l|}{\sf n\_no\_coor} & (Optional) \# unmapped unplaced reads ({\sf RNAME} *) & {\tt uint64\_t} & \\
-  \cline{1-7}
+  \multicolumn{4}{|l|}{{\sf n\_no\_coor} (optional)} & \# unmapped unplaced reads ({\sf RNAME} *) & {\tt uint64\_t} & \\\cline{1-7}
 \end{tabular}}
 \end{table}
 
