--- a/tabix.tex
+++ b/tabix.tex
@@ -19,7 +19,7 @@
 \begin{center}
 \begin{tabular}{|l|l|l|l|l|l|l|}
 \hline
-\multicolumn{4}{|c|}{\bf Field} & \multicolumn{1}{c|}{\bf Descrption} & \multicolumn{1}{c|}{\bf Type} & \multicolumn{1}{c|}{\bf Value} \\
+\multicolumn{4}{|c|}{\bf Field} & \multicolumn{1}{c|}{\bf Description} & \multicolumn{1}{c|}{\bf Type} & \multicolumn{1}{c|}{\bf Value} \\
 \hline\hline
 \multicolumn{4}{|l|}{\tt magic} & Magic string & {\tt char[4]} & TBI$\backslash$1 \\
 \hline
@@ -61,8 +61,9 @@
 \cline{2-7}
  & \multicolumn{6}{c|}{\textcolor{gray}{\it List of distinct intervals (n=n\_intv)}} \\
 \cline{3-7}
- & & \multicolumn{2}{l|}{\tt ioff} & File offset of the first record in the interval & {\tt uint64\_t} & \\\cline{1-7}
-\multicolumn{4}{|l|}{\sf n\_no\_coor} & \# unmapped reads without coordinates set & {\tt uint64\_t} & \\
+ & & \multicolumn{2}{l|}{\tt ioff} & File offset of the first record in the interval & {\tt uint64\_t} & \\
+\hline
+\multicolumn{4}{|l|}{{\tt n\_no\_coor} (optional)} & \# unmapped reads without coordinates set & {\tt uint64\_t} & \\
 \hline
 \end{tabular}
 \end{center}
