Revert "changed nofRecords in slice and container to ltf8 (64-bit integer)."
This reverts commit fc9556d0abc072f09b49ef388caca1b177862efa.

--- a/CRAMv3.0.tex
+++ b/CRAMv3.0.tex
@@ -428,7 +428,7 @@ itf8 & starting position on the reference & the alignment start position or\line
 itf8 & alignment span & the length of the alignment or\linebreak{}
 0 for unmapped reads\tabularnewline
 \hline
-ltf8 & number of records & number of records in the container\tabularnewline
+itf8 & number of records & number of records in the container\tabularnewline
 \hline
 itf8 & record counter & 1-based sequential index of records in the file/stream.\tabularnewline
 \hline
@@ -736,7 +736,7 @@ reads\tabularnewline
 itf8 & alignment span & the length of the alignment or 0 for unmapped or unsorted 
 reads\tabularnewline
 \hline
-ltf8 & number of records & the number of records in the slice\tabularnewline
+itf8 & number of records & the number of records in the slice\tabularnewline
 \hline
 ltf8 & record counter & 1-based sequential index of records in the file/stream\tabularnewline
 \hline
