changed container record counter to LTF8

--- a/CRAMv3.0.tex
+++ b/CRAMv3.0.tex
@@ -430,7 +430,7 @@ itf8 & alignment span & the length of the alignment or\linebreak{}
 \hline
 itf8 & number of records & number of records in the container\tabularnewline
 \hline
-itf8 & record counter & 1-based sequential index of records in the file/stream.\tabularnewline
+ltf8 & record counter & 1-based sequential index of records in the file/stream.\tabularnewline
 \hline
 ltf8 & bases & number of read bases\tabularnewline
 \hline
