changed names of bases/scores read features to b and q repsectively.

--- a/CRAMv3.0.tex
+++ b/CRAMv3.0.tex
@@ -1011,9 +1011,9 @@ The following codes are used to distinguish variations in read coordinates:
 \textbf{Feature code} & \textbf{Id} & \textbf{Data series type} & \textbf{Data 
 series name} & \textbf{Description}\tabularnewline
 \hline
-Bases & a (0x61) & byte[ ] & BA & a stretch of bases\tabularnewline
+Bases & b (0x62) & byte[ ] & BA & a stretch of bases\tabularnewline
 \hline
-Scores & b (0x62) & byte[ ] & QS & a stretch of scores\tabularnewline
+Scores & q (0x71) & byte[ ] & QS & a stretch of scores\tabularnewline
 \hline
 Bases and scores & A (0x41) & byte[ ],byte[ ] & BA,QS & A a stretch of bases and
 quality scores score\tabularnewline
