--- a/CSIv2.tex
+++ b/CSIv2.tex
@@ -30,11 +30,11 @@
   & \multicolumn{6}{c|}{\textcolor{gray}{\it List of distinct bins (n=n\_bin)}} \\\cline{3-7}
   & & \multicolumn{2}{l|}{\sf bin} & Distinct bin & {\tt uint32\_t} & \\\cline{3-7}
   & & \multicolumn{2}{l|}{\sf loffset} & (Virtual) file offset of the first overlapping record & {\tt uint64\_t} & \\\cline{3-7}
+  & & \multicolumn{2}{l|}{\sf n\_rec} & Number of records stored in the bin & {\tt uint64\_t} & \\\cline{3-7}
   & & \multicolumn{2}{l|}{\sf n\_chunk} & \# chunks & {\tt int32\_t} & \\\cline{3-7}
   & & \multicolumn{5}{c|}{\textcolor{gray}{\it List of chunks (n=n\_chunk)}} \\\cline{4-7}
   & & & {\sf chunk\_beg} & (Virtual) file offset of the start of the chunk & {\tt uint64\_t} & \\\cline{4-7}
   & & & {\sf chunk\_end} & (Virtual) file offset of the end of the chunk & {\tt uint64\_t} & \\\cline{4-7}
-  & & & {\sf n\_rec}     & Number of records stored in the chunk & {\tt uint64\_t} & \\\cline{2-7}
   \cline{1-7}
 \end{tabular}}
 \end{table}
