fixed EOF checksum

--- a/CRAMv3.0.tex
+++ b/CRAMv3.0.tex
@@ -823,7 +823,7 @@ e0 45 4f 46 & itf8 & 4542278 & alignment start\tabularnewline
 \hline
 00 & array & 0 & landmarks\tabularnewline
 \hline
-8b d7 72 2f & integer & 796055435 & container header CRC32\tabularnewline
+05 bd d9 4f & integer & 1339669765 & container header CRC32\tabularnewline
 \hline
 \multicolumn{4}{|l|}{\textit{Compression header block}}\tabularnewline
 \hline
