added clarification on the 'compressed size' field in the rANS codec

--- a/CRAMv3.0.tex
+++ b/CRAMv3.0.tex
@@ -1287,7 +1287,7 @@ A compressed data block consists of the following logical parts:
 \hline
 byte & order & the order of the codec, either 0 or 1\tabularnewline
 \hline
-int & compressed size & the size in bytes of the compressed blob\tabularnewline
+int & compressed size & the size in bytes of frequency table and compressed blob\tabularnewline
 \hline
 int & data size & raw or uncompressed data size in bytes\tabularnewline
 \hline
