--- a/SAMv1.tex
+++ b/SAMv1.tex
@@ -697,7 +697,9 @@ hold the annotation information, see Section~\ref{sec-recommended-practice}.
 \subsection{The BGZF compression format}
 
 BGZF is block compression implemented on top of the standard gzip file
-format. The goal of BGZF is to provide good compression while allowing
+format.\footnote{L.~Peter Deutsch, {\bf GZIP file format specification
+version~4.3}, \href{http://tools.ietf.org/html/rfc1952}{\sl RFC 1952}.}
+The goal of BGZF is to provide good compression while allowing
 efficient random access to the BAM file for indexed queries. The BGZF
 format is `gunzip compatible', in the sense that a compliant gunzip
 utility can decompress a BGZF compressed file.\footnote{It is worth noting that there is a known bug in the Java {\sf
@@ -707,7 +709,8 @@ manipulated using the built-in Java {\sf util.zip} package, but naive
 use of {\sf GZIPInputStream} on a BGZF file will not work due to this
 bug.}
 
-A BGZF file is a series of concatenated BGZF blocks. Each BGZF block
+A BGZF file is a series of concatenated BGZF blocks, each no larger
+than~64Kb before or after compression. Each BGZF block
 is itself a spec-compliant gzip archive which contains an ``extra field''
 in the format described in RFC1952. The gzip file format allows the
 inclusion of application-specific extra fields and these are ignored by
@@ -759,6 +762,13 @@ table.  (All integers are little endian as is required by RFC1952.)
   \cline{1-6}
 \end{tabular}}
 \end{table}
+
+The random access method to be described next limits the uncompressed
+contents of each BGZF block to a maximum of $2^{16}$~bytes of data.
+Thus while {\sf ISIZE} is stored as a {\tt uint32\_t} as per the gzip format,
+in BGZF it is limited to the range~$[0,65536]$.
+{\sf BSIZE} can represent BGZF block sizes in the range~$[1,65536]$, though
+typically {\sf BSIZE} will be rather less than~{\sf ISIZE} due to compression.
 
 \subsubsection{Random access}
 
